Account Linking option added to Hamburger menu, including when logged out

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -3,3 +3,4 @@ en:
     directoryopus:
       linkopus_title: "Account Linking"
       linkopus_heading: "Directory Opus - Account Linking"
+      linkopus_hamburger_label: "Account Linking"
