--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -4,3 +4,5 @@ en:
       linkopus_title: "Account Linking"
       linkopus_heading: "Directory Opus - Account Linking"
       linkopus_hamburger_label: "Account Linking"
+      linkopus_user_button_you: "Link Your Account"
+      linkopus_user_button_other: "Link This Account"
