--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -5,3 +5,5 @@ en:
     directoryopus_account_link_url: "Parameter for Directory Opus linking API. Must begin with https://."
     directoryopus_account_link_code_name: "Parameter for Directory Opus linking API."
     directoryopus_account_link_code_code: "Parameter for Directory Opus linking API."
+    directoryopus_composer_help_title: "Text of link to place above the post editor."
+    directoryopus_composer_help_url: "Target of link to place above the post editor."
