--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -12,5 +12,7 @@ en:
             linkopus_change: "Account linking: New status"
             linkopus_block: "Account linking: Blocked due to too many failures"
             linkopus_badcode: "Account linking: Invalid reg code given"
-            linkopus_jobstart: "Account linking: Automated refresh start"
-            linkopus_jobend: "Account linking: Automated refresh end"
+            linkopus_jobstart: "Account linking (scheduled): Begun"
+            linkopus_jobend: "Account linking (scheduled): Completed"
+            linkopus_jobunlink: "Account linking (scheduled): Unlink"
+            linkopus_jobchange: "Account linking (scheduled): Change"
